Update 'backend-tests-go-erqwqbza' component image to: quay.io/rhtap_qe/backend-tests-go-erqwqbza:007866cd99b67179349ec37264feebc512eb5779@sha256:d69abf7aa073df35fbb653ad2903e21bea519c7dca1457ce7837e36e70859a29

--- a/components/backend-tests-go-erqwqbza/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-erqwqbza/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-erqwqbza
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-erqwqbza:007866cd99b67179349ec37264feebc512eb5779@sha256:d69abf7aa073df35fbb653ad2903e21bea519c7dca1457ce7837e36e70859a29
+          name: container-image
